After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 671865 - Breadcrumb width not updating on folder rename
Breadcrumb width not updating on folder rename
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Path Bar
3.3.x
Other Linux
: Normal minor
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-03-12 04:01 UTC by Vadim Rutkovsky
Modified: 2012-03-12 21:00 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Vadim Rutkovsky 2012-03-12 04:01:33 UTC
Original Report: https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/952648

DistroRelease: Ubuntu 12.04
Package: nautilus 1:3.3.91-0ubuntu4

TEST CASE:
1. Open Nautilus.
2. Create a folder with a long name.
3. Enter the folder.
4. Use the breadcrumb navigation (or the back button) to go back to the new folder's parent.
5. Rename the new folder to something short.

RESULT:
* The breadcrumb navigation updates the new folder name but doesn't change the breadcrumb's width.

Screencast: https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/952648/+attachment/2853808/+files/nautilus-breadcrumb.ogv
Comment 1 Cosimo Cecchi 2012-03-12 21:00:33 UTC
Thanks for the report, I now fixed this bug in git master.