pathbar: refresh label size request every time it changes

Or we might end up with buttons having the wrong size if a folder on the
pathbar changes name.

https://bugzilla.gnome.org/show_bug.cgi?id=671865